--- a/cursos.html
+++ b/cursos.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: 'Willian Justen - Cursos'
-description: 'Aprenda as mais diversas tecnologias em cursos separados em pequenos e completos módulos.'
+title: 'Leandro Mundim - Cursos'
+description: 'Aprendizado efetivo no menor tempo.'
 image: '/assets/img/cursos/cursos-bg.png'
 ---
 
