--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: "De Monte Carmelo para o Mundim.."
 
 <h2>Um post sobre mim</h2>
 
-<p>Contar minha história.</p>
+<p>Nasci em Monte Carmelo, Minas Gerais. Por lá estudei nas escolas: Estadual Melo Viana (1ª - 4ª) e Escola Estadual Gregoriano Canedo (5ª - 3°).</p>
 
 
 <p>Por onde eu passei.</p>
