--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: "De Monte Carmelo para o Mundim.."
 
 <h2>Um post sobre mim</h2>
 
-<p>Nasci em Monte Carmelo, Minas Gerais. Onde estudei nas escolas: Melo Viana (1ª - 4ª) e Gregoriano Canedo (5ª - 3°). No ano de 2009 entrei na primeira turma de Matemática Industrial da Universidade Federal de Goiás. Me formei em 2013, iniciando o mestrado em Ciência da Computação e Matemática Computacional pela Universidade de São Paulo. Defendi o mestrado, três meses depois, qualifiquei meu doutorado e pouco depois virei pesquisador visitante na Faculdade de Engenharia da Universidade do Porto, por 10 meses. De volta a USP, estou me reinventando para fazer a melhor tese possível.</p>	
+<p>Nasci em Monte Carmelo, Minas Gerais. Onde estudei nas escolas: Melo Viana (1ª - 4ª) e Gregoriano Canedo (5ª - 3°). No ano de 2009 entrei na primeira turma de Matemática Industrial da Universidade Federal de Goiás. Me formei em 2013, iniciando o mestrado em Ciência da Computação e Matemática Computacional pela Universidade de São Paulo. Defendi o mestrado, três meses depois, qualifiquei meu doutorado e pouco depois virei pesquisador visitante, por dez meses, na Faculdade de Engenharia da Universidade do Porto. De volta a USP, estou me reinventando para fazer a melhor tese possível.</p>	
 
 <p>Quero retribuir um pouco do que aprendi nessa caminhada, sempre fui muito ruim de piada, por isso criei o blog <b>Mundim da Educação</b>.</p>
 
