--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ description: "De Monte Carmelo para o Mundim.."
 
 <p>Nasci em Monte Carmelo, Minas Gerais. Onde estudei nas escolas: Melo Viana (1ª - 4ª) e Gregoriano Canedo (5ª - 3°). No ano de 2009 entrei na primeira turma de Matemática Industrial da Universidade Federal de Goiás. Me formei em 2013, iniciando o mestrado em Ciência da Computação e Matemática Computacional pela Universidade de São Paulo. Defendi o mestrado, três meses depois, qualifiquei meu doutorado e pouco depois virei pesquisador visitante, por dez meses, na Faculdade de Engenharia da Universidade do Porto. De volta a USP, estou me reinventando para fazer a melhor tese possível.</p>	
 
-<p>Quero retribuir um pouco do que aprendi nessa caminhada, sempre fui muito ruim de piada, por isso criei o blog <b>Mundim da Educação</b>.</p>
+<p>Quero retribuir um pouco do que aprendi nessa caminhada, por isso criei o blog <b>Mundim da Educação</b>.</p>
 
 
 <h2>Habilidades</h2>
@@ -19,4 +19,5 @@ description: "De Monte Carmelo para o Mundim.."
 <ul class="skill-list">
 	<li>Modelagem matemática</li>
 	<li>Desenvolvimento de softwares</li>
+	<li>Projetos de otimização e automação</li>
 </ul>
