--- a/about.html
+++ b/about.html
@@ -19,5 +19,5 @@ description: "De Monte Carmelo para o Mundim.."
 <ul class="skill-list">
 	<li>Modelagem matemática</li>
 	<li>Desenvolvimento de softwares</li>
-	<li>Projetos de otimização e automação</li>
+	<li>Projetos de otimização</li>
 </ul>
