--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: minimal
 title: "Sobre mim"
 permalink: /about/index.html
-description: "De Monte Carmelo para o Mundim.."
+description: "Café com Pão de Queijo."
 ---
 
 <img itemprop="image" class="img-rounded" width="120" height="120" src="https://lh3.googleusercontent.com/x5GM1DniZATDrMQIkOUCmBgNHx2-aHYdDpME9yv6gvscJ-2MPkd0ZKDtMDOsUYoGrPDJ_hGWNw=w5120-h3200-no" alt="{{site.name}}">
